attempts to loop obstacles 1

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,7 @@ body {
 }
 
 .lipstickLid {
-  background-image: url(../lipsticklid.jpg);
+  background-image: url(../lipsticklid2.png);
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
