--- a/styles/main.css
+++ b/styles/main.css
@@ -37,9 +37,7 @@ body {
 }
 
 .roadGrey {
-  /*background-color: rgb(117, 112, 112);*/
   background-image: url(../roadmarkings.jpg);
-  /*background-repeat: no-repeat;*/
   background-size: contain;
   cursor: pointer;
 }
@@ -129,7 +127,6 @@ p {
 
 .grass {
   background-color: rgb(63, 155, 150);
-  /*background: radial-gradient(#2bb962, #1e836d )*/
 }
 
 .firstRows{
@@ -146,14 +143,17 @@ p {
 
 
 
-@media (max-height: 650px) {
+@media screen and (max-height: 700px) {
   .header {
     height: 150px;
+    padding-top: 2px;
   }
 
   .grid-wrapper {
-    height: 110vh;
+    height: 20vh;
   }
+
+  
   
   p {
     font-size: 17px;
@@ -161,9 +161,11 @@ p {
 
   h1 {
     font-size: 25px;
+    display: none;
+    color: blue;
   }
 
-  button {
+  #start {
     font-size: 17px;
   }
 }
